@@ -146,7 +146,7 @@
 				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 					<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
 					<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
-					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.78" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
+					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.08" y="80%" width="{columnwidth}*0.12" height="12%" imagetype="icon" path="remoteTimer" />
 				</loop>
 			</area>
 			<area condition="eq({indexpanelMain}, 3)" x="1%" y="80%" width="44%" height="18%" layer="3">
@@ -155,7 +155,7 @@
 					<drawtextbox x="2%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 					<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
 					<drawtext condition="{timers[recording]}" align="center" x="10" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
-					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.8" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
+					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.08" y="80%" width="{columnwidth}*0.12" height="12%" imagetype="icon" path="remoteTimer" />
 				</loop>
 			</area>
 		</areacontainer>
@@ -175,7 +175,7 @@
 				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 					<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
 					<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
-					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.78" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
+					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.08" y="80%" width="{columnwidth}*0.12" height="12%" imagetype="icon" path="remoteTimer" />
 				</loop>
 			</area>
 			<area condition="eq({indexpanelMain}, 3)" x="{areawidth}*0.212" y="80%" width="44%" height="18%" layer="3">
@@ -184,7 +184,7 @@
 					<drawtextbox x="2%" y="40%" width="{columnwidth}*0.875" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 					<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
 					<drawtext condition="{timers[recording]}" align="center" x="10" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
-					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.8" y="78%" width="{columnwidth}*0.16" height="20%" imagetype="skinpart" path="remoteTimers" />
+					<drawimage condition="{timers[isremotetimer]}" x="{columnwidth}*0.08" y="80%" width="{columnwidth}*0.12" height="12%" imagetype="icon" path="remoteTimer" />
 				</loop>
 			</area>
 		</areacontainer>
